# DataETL

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  dim_product.csv  pytest.ini  requirements.txt
.claude/: settings.json
.claude/agents/: branch-master.md  hypervisor.md
.github/workflows/: tests.yml
airflow/: airflow.cfg
airflow/dags/: connections.py  etl_dim_customer.py  etl_dim_date.py  etl_dim_delivery_method.py  etl_dim_geography.py  etl_dim_order_channel.py  etl_dim_payment_method.py  etl_dim_product.py  etl_dim_sales_territory.py  etl_dim_territory.py  etl_fact_online_sales.py
app/: main.py
docker/: docker-compose.yml
docs/: bi_export_guide.md  case_study_xcom_sqlite_timeout.md  dag_reference.md  etl_plan.md  source_to_target_mapping.md  workflow_restore.md
ralph/: AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  lib.sh  notify.sh  ralph-parallel.sh  ralph-think.sh  ralph.sh  ralph.yaml
ralph/references/: playbook-summary.md
ralph/templates/: PRD_template.md
reports/: test-report.html
scripts/: bootstrap.sh  export_all_to_csv.py  export_to_csv.py  health_check.sh  prelab_restore.sh  reset_env.sh  start_airflow.sh
sql/source/: extract_dim_customer.sql  extract_dim_delivery_method.sql  extract_dim_geography.sql  extract_dim_payment_method.sql  extract_dim_product.sql  extract_dim_sales_territory.sql  extract_dim_territory.sql  (+1 more)
tests/: conftest.py  test_extract.py  test_load.py  test_qa_pipeline.py  test_transform.py  test_transform_phase2.py
tools/sql_query/: pyproject.toml  server.py
(+16 files in other folders)
