[project]
name = "sql-query-mcp"
version = "0.1.0"
description = "Universal SQL query MCP server for SQL Server and PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.3.0",
    "pyodbc>=5.1.0",
    "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
